[package]
name = "webhooks-rust"
version = "0.1.0"
authors = ["Yolier Galan Tasse <gallegogt@gmail.com>"]

[features]
# This allows us to use `#[cfg(unstable)]` to conditionalize the use of
# unstable Rust features from the nightly builds.  This is handy if we want
# to use, say, benchmaking from the `test` library when available.  Also,
# `travis-cargo` expects this to be here when building against the nightly
# version of Cargo.
unstable = []

[[bin]]
name = "webhooks"
path = "src/main.rs"

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"
